Certified_Kubernetes_Application_Developer_CKAD_Course_3rd_Edition/Module5_Sample_Exam/Lesson15_Sample_CKAD_Exam/15_11_Using_NetworkPolicies/network-policy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nwpnginx
  labels:
    app: nginx
    role: frontend
spec:
  containers:
  - name: nginx
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: nwpbusybox
  labels:
    access: allowed
    role: frontend
spec:
  containers:
  - name: busybox
    image: busybox
    args: 
    - sleep
    - "3600"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: frontend
